; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_cmd_append_selection_and_cancel.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_cmd_append_selection_and_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_copy_cmd_state = type { %struct.session*, %struct.window_mode_entry* }
%struct.session = type { i32 }
%struct.window_mode_entry = type { i32 }

@WINDOW_COPY_CMD_CANCEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.window_copy_cmd_state*)* @window_copy_cmd_append_selection_and_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @window_copy_cmd_append_selection_and_cancel(%struct.window_copy_cmd_state* %0) #0 {
  %2 = alloca %struct.window_copy_cmd_state*, align 8
  %3 = alloca %struct.window_mode_entry*, align 8
  %4 = alloca %struct.session*, align 8
  store %struct.window_copy_cmd_state* %0, %struct.window_copy_cmd_state** %2, align 8
  %5 = load %struct.window_copy_cmd_state*, %struct.window_copy_cmd_state** %2, align 8
  %6 = getelementptr inbounds %struct.window_copy_cmd_state, %struct.window_copy_cmd_state* %5, i32 0, i32 1
  %7 = load %struct.window_mode_entry*, %struct.window_mode_entry** %6, align 8
  store %struct.window_mode_entry* %7, %struct.window_mode_entry** %3, align 8
  %8 = load %struct.window_copy_cmd_state*, %struct.window_copy_cmd_state** %2, align 8
  %9 = getelementptr inbounds %struct.window_copy_cmd_state, %struct.window_copy_cmd_state* %8, i32 0, i32 0
  %10 = load %struct.session*, %struct.session** %9, align 8
  store %struct.session* %10, %struct.session** %4, align 8
  %11 = load %struct.session*, %struct.session** %4, align 8
  %12 = icmp ne %struct.session* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.window_mode_entry*, %struct.window_mode_entry** %3, align 8
  %15 = call i32 @window_copy_append_selection(%struct.window_mode_entry* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.window_mode_entry*, %struct.window_mode_entry** %3, align 8
  %18 = call i32 @window_copy_clear_selection(%struct.window_mode_entry* %17)
  %19 = load i32, i32* @WINDOW_COPY_CMD_CANCEL, align 4
  ret i32 %19
}

declare dso_local i32 @window_copy_append_selection(%struct.window_mode_entry*) #1

declare dso_local i32 @window_copy_clear_selection(%struct.window_mode_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
